--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nestjs.com",
+  "name": "enterprise.nestjs.com",
   "version": "1.0.0",
-  "description": "NestJS - official website",
+  "description": "Enterprise | NestJS - official website",
   "scripts": {
     "build": "rm -rf dist && parcel build index.html --public-url ./ && npm run copy-assets",
     "copy-assets": "copyfiles img/* dist",
